third_party/move/move-compiler-v2/tests/checking-lang-v1/struct_variants.exp

Diagnostics:
error: unsupported language construct
  ┌─ tests/checking-lang-v1/struct_variants.move:3:5
  │
3 │     enum S { None, Some{x: u64} }
  │     ^^^^ Move 2 language construct is not enabled: enum types

error: unsupported language construct
  ┌─ tests/checking-lang-v1/struct_variants.move:6:9
  │
6 │         match (s) {
  │         ^^^^^ Move 2 language construct is not enabled: match expression
